--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/willbursch/liri-node-app/issues"
   },
-  "homepage": "https://github.com/willbursch/liri-node-app#readme"
+  "homepage": "https://github.com/willbursch/liri-node-app#readme",
+  "dependencies": {
+    "eslint": "^5.7.0"
+  }
 }
